--- a/sadfasd.html
+++ b/sadfasd.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -25,7 +25,7 @@
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="collapse navbar-collapse" id="navbar">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -47,7 +47,7 @@
           <h1 id="content-h1">Birşey gelicek</h1>
           <h3 id="content-h3">Buraya uzun birşey gelicek</h3>
           <hr>
-          <button type="button" class="btn btn-default btn-lg" name="button"><i class="fa fa-paw"></i> Get Started!</button>
+          <button type="button" class="btn btn-default btn-lg"><i class="fa fa-paw fa-fw"></i> Get Started!</button>
         </div>
       </div>
     </div>
