--- a/sadfasd.html
+++ b/sadfasd.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Purrfect Match</title>
+  <title>Bişey?</title>
   <link rel="stylesheet" type="text/css" href="startup.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -44,7 +44,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div id="content">
-          <h1 id="content-h1">Birşey gelicek</h1>
+          <h1 id="content-h1">Birşey gelicek!</h1>
           <h3 id="content-h3">Buraya uzun birşey gelicek</h3>
           <hr>
           <button type="button" class="btn btn-default btn-lg"><i class="fa fa-paw fa-fw"></i> Get Started!</button>
