--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Birşey1?</title>
+  <title>Birsey1?</title>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -20,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <a class="navbar-brand" href="#">Birşey?</a>
+        <a class="navbar-brand" href="#">Birsey?</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,8 +43,8 @@
     <div class="row">
       <div class="col-lg-12">
         <div id="content">
-          <h1 id="content-h1">Birşey gelicek!</h1>
-          <h3 id="content-h3">Buraya uzun birşey gelicek</h3>
+          <h1 id="content-h1">Birsey gelicek!</h1>
+          <h3 id="content-h3">Buraya uzun birsey gelicek</h3>
           <hr>
           <button type="button" class="btn btn-default btn-lg"><i class="fa fa-paw fa-fw"></i> Get Started!</button>
         </div>
